# Graphics-Programming

./: CMakeLists.txt  README.md
Graphics-Programming/: CMakeLists.txt
Graphics-Programming/res/models/tree/: Tree.mtl
Graphics-Programming/res/shaders/: color.frag  default.frag  default.vert  lightsPhongMvp.frag  lightsPhongMvp.vert  mvp.frag  mvpTexture.frag  mvpTexture.vert  mvpTextureBlend.frag  phongMvp.frag  phongMvp.vert  skybox.frag  skybox.vert  skyboxMvp.frag  skyboxMvp.vert  terrain.frag  terrain.vert  textureMvp.frag  textureMvp.vert  textureTest.frag  textureTest.vert  uniformTest.frag  uniformTest.vert
Graphics-Programming/src/: Camera.cpp  Camera.h  Firefly.cpp  Firefly.h  GameObject.cpp  GameObject.h  InputHandler.cpp  InputHandler.h  Inputs.h  Lights.cpp  Lights.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PlayerController.cpp  PlayerController.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Terrain.cpp  Terrain.h  Texture2D.cpp  Texture2D.h  Time.cpp  Time.h  Transform.cpp  Transform.h  main.cpp
Graphics-Programming/src/Interfaces/: Component.h  IUpdateable.h
Graphics-Programming/src/lights/: Attenuation.h  DirectionalLight.h  LightManager.cpp  LightManager.h  Phong.h  PointLight.h  SpotLight.cpp  SpotLight.h
Graphics-Programming/src/util/: FileUtil.cpp  FileUtil.h  ModelUtil.cpp  ModelUtil.h  PrimitiveUtil.cpp  PrimitiveUtil.h  RandomUtil.cpp  RandomUtil.h  TerrainUtil.cpp  TerrainUtil.h
libs/assimp/contrib/zip/src/: zip.c
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glm/: CMakeLists.txt
libs/std-image/: CMakeLists.txt
